Begin fixing layout problems.  Map grid is now in good shape.
areaPairs dispensed with and simplified to tracker.areaMaps with grid layouts.

Map room pixel gap problem fixed (no idea why the changes altered the behavior).

Prep for area card styling and area progress bars.

--- a/static/global.css
+++ b/static/global.css
@@ -60,8 +60,8 @@ html {
     /* width: 100%; */
 
 		display: grid;
-    grid-template-columns: repeat(var(--level-cols), calc(100% / var(--level-cols)));
-		grid-template-rows: repeat(var(--level-rows), calc(100% / var(--level-rows)));
+    /* grid-template-columns: repeat(var(--level-cols), calc(100% / var(--level-cols)));
+		grid-template-rows: repeat(var(--level-rows), calc(100% / var(--level-rows))); */
 		gap: 1px;
 
     justify-content: center;
